[tool.poetry]
name = "fortress"
version = "0.1.0"
description = "for fetching secrets from Hashicorp Vault"
authors = ["Artsy Product Sapphire Team <sapphire@artsymail.com>"]

packages = [
    { include = "fortress", from = "src" },
]

[tool.poetry.dependencies]
boto3 = "^1.26.61"
python = ">=3.9,<3.11"
hvac = "^1.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-describe = "^2.0.1"
pytest-mock = "^3.10.0"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"
